# routes/index.js
@@ -1,7 +1,8 @@
 const routes = require('express').Router();
 
-routes.use('/', require('./lesson1'));
-routes.use('/', require('./contacts'));
-// routes.use('/contacts', require('./contacts'));
+// routes.use('/', require('./lesson1'));
+// routes.use('/', require('./contacts'));
+routes.use('/contacts', require('./contacts'));
+routes.use('/', require('./swagger'));
 
 module.exports = routes; 
