# server.js
@@ -5,31 +5,28 @@ const mongodb = require('./db/connect');
 
 const port = process.env.PORT || 8080;
 const app = express();
-const cors = require('cors');
+// const cors = require('cors');
 
-const swaggerUi = require('swagger-ui-express');
-const swaggerDocument = require('./swagger.json');
+// put the swagger stuff in routes/swagger.js!
+// const swaggerUi = require('swagger-ui-express');
+// const swaggerDocument = require('./swagger.json');
 
 app
     .use(bodyParser.json())
     .use((req, res, next) => {
         res.setHeader('Access-Control-Allow-Origin', '*');
-        res.setHeader(
-            'Access-Control-Allow-Headers',
-            'Origin, X-Reqested-With, Content-Type, Accept, Z-Key'
-        );
-        res.setHeader('Content-Type', 'application/json');
-        res.setHeader('Access-Control-Allow-Methods', 'GET, POST PUT, DELETE, OPTIONS');
+        // res.setHeader(
+        //     'Access-Control-Allow-Headers',
+        //     'Origin, X-Reqested-With, Content-Type, Accept, Z-Key'
+        // );
+        // res.setHeader('Content-Type', 'application/json');
+        // res.setHeader('Access-Control-Allow-Methods', 'GET, POST PUT, DELETE, OPTIONS');
         next();
     })
     .use('/', require('./routes'))
-    .use(cors())
-    .use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+    // .use(cors())
+    // .use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
  
-// app.listen(port);
-// console.log('Web Server is listening at port ' + (port));
-
-// mongodb.initDb((err, mongodb) => {
 mongodb.initDb((err) => {
     if (err) {
         console.log(err);
